# superkittens

./: Cargo.toml  README.md  compose.yaml
.github/workflows/: ci.yml
crates/supertokens/: Cargo.toml
crates/supertokens-axum/: Cargo.toml
crates/supertokens-axum/examples/: axum_emailpassword.rs
crates/supertokens-axum/src/: cors.rs  extractors.rs  lib.rs  middleware.rs  request.rs  response.rs  router.rs  verify_session.rs
crates/supertokens-axum/tests/: test_middleware.rs
crates/supertokens-axum/tests/common/: mod.rs
crates/supertokens/src/: auth_utils.rs  constants.rs  error.rs  lib.rs  logger.rs  normalised_url_domain.rs  normalised_url_path.rs  post_st_init_callbacks.rs  querier.rs  recipe_module.rs  supertokens.rs  user_context.rs  utils.rs
crates/supertokens/src/framework/: mod.rs  request.rs  response.rs
crates/supertokens/src/ingredients/: email_delivery.rs  mod.rs  sms_delivery.rs
crates/supertokens/src/recipe/: mod.rs
crates/supertokens/src/recipe/accountlinking/: interfaces.rs  recipe_implementation.rs  types.rs
crates/supertokens/src/recipe/dashboard/: interfaces.rs  recipe_implementation.rs  types.rs
crates/supertokens/src/recipe/emailpassword/: constants.rs  errors.rs  interfaces.rs  mod.rs  recipe.rs  recipe_implementation.rs  types.rs  utils.rs
crates/supertokens/src/recipe/emailpassword/api/: email_exists.rs  generate_password_reset_token.rs  implementation.rs  mod.rs  password_reset.rs  signin.rs  signup.rs  utils.rs
crates/supertokens/src/recipe/emailverification/: constants.rs  interfaces.rs  recipe_implementation.rs  types.rs
crates/supertokens/src/recipe/jwt/: constants.rs  interfaces.rs  recipe_implementation.rs  types.rs
crates/supertokens/src/recipe/multifactorauth/: constants.rs  interfaces.rs  recipe_implementation.rs  types.rs
crates/supertokens/src/recipe/multitenancy/: constants.rs  interfaces.rs  recipe_implementation.rs  types.rs
crates/supertokens/src/recipe/oauth2provider/: interfaces.rs  recipe_implementation.rs  types.rs
crates/supertokens/src/recipe/openid/: constants.rs  interfaces.rs  recipe_implementation.rs  types.rs
crates/supertokens/src/recipe/passwordless/: constants.rs  interfaces.rs  mod.rs  recipe_implementation.rs  types.rs
crates/supertokens/src/recipe/saml/: interfaces.rs  mod.rs  recipe_implementation.rs  types.rs
crates/supertokens/src/recipe/session/: access_token.rs  api_implementation.rs  constants.rs  cookie_and_header.rs  errors.rs  interfaces.rs  jwt.rs  mod.rs  recipe.rs  recipe_implementation.rs  session_class.rs  session_functions.rs  types.rs  utils.rs
crates/supertokens/src/recipe/session/claims/: boolean_claim.rs  mod.rs  primitive_array_claim.rs  primitive_claim.rs
crates/supertokens/src/recipe/totp/: interfaces.rs  mod.rs  recipe_implementation.rs  types.rs
crates/supertokens/src/recipe/usermetadata/: interfaces.rs  recipe_implementation.rs  types.rs
crates/supertokens/src/recipe/userroles/: interfaces.rs  recipe_implementation.rs  types.rs
crates/supertokens/src/recipe/webauthn/: interfaces.rs  recipe_implementation.rs  types.rs
crates/supertokens/src/types/: config.rs  mod.rs  response.rs  user.rs
crates/supertokens/tests/: test_config.rs  test_emailpassword.rs  test_emailverification.rs  test_jwt.rs  test_mfa.rs  test_multitenancy.rs  test_passwordless.rs  test_querier.rs  test_session.rs  test_session_claims.rs  test_thirdparty.rs  test_totp.rs  test_user_context.rs  test_usermetadata.rs  test_userroles.rs  test_utils.rs
crates/supertokens/tests/common/: mod.rs
