[workspace]
resolver = "2"
members = [
    "crates/supertokens",
    "crates/supertokens-axum",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.80"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
base64 = "0.22"
once_cell = "1"
axum = "0.8"
axum-core = "0.5"
tower = { version = "0.5", features = ["util"] }
tower-layer = "0.3"
http = "1"
http-body-util = "0.1"
